<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    tools:context="com.android.capstone_TeamOrange_G1RulesExpert.Common.LoginSignup.VerifyOTP">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/icon"
            android:onClick="goToHomeFromOTP"
            android:padding="5dp"
            android:src="@drawable/ic_clear_black_24dp"
            android:tint="@color/black"
            app:srcCompat="@drawable/ic_clear_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/aclonica"
            android:includeFontPadding="false"
            android:text="@string/successfully_registered"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="35sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/tick"
            android:contentDescription="@string/icon"
            />


        <TextView
            android:id="@+id/otp_description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/antic"
            android:includeFontPadding="false"
            android:text="@string/enter_one_time_password_sent_on"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@color/colorPrimaryDark"
            android:onClick="callNextScreenFromOTP"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:fontFamily="@font/aclonica"
            android:textSize="18sp"/>


    </LinearLayout>

</LinearLayout>