<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_grey"
    android:padding="30dp"
    tools:context="com.android.capstone_TeamOrange_G1RulesExpert.Common.LoginSignup.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/backbtnlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/backButtonPress"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/icon"
                android:src="@drawable/back_icon" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/loginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/backbtnlayout"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:gravity="center"
                android:text="@string/log_in"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="40sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/countryCodeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_below="@id/loginText"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/Country_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.hbb20.CountryCodePicker
                    android:id="@+id/login_country_code_picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    app:ccp_defaultNameCode="CA"
                    app:ccp_defaultPhoneCode="1"
                    app:ccp_countryPreference="CA"
                    app:ccp_clickable="false"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/Country_code">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_phone_number"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:hint="@string/enter_phone_number"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/black"
                    app:hintTextColor="@color/black"
                    app:startIconDrawable="@drawable/ic_baseline_local_phone_24"
                    app:startIconTint="@color/black">


                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/antic"
                        android:inputType="phone"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@null" />


                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/PasswordLayout"
            android:layout_width="match_parent"
            android:layout_below="@+id/countryCodeLayout"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_Password"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@android:drawable/ic_lock_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/antic"
                    android:inputType="textPassword"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/buttonLayout"
            android:layout_below="@+id/PasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="#00000000"
                android:text="@string/forget_password" />
            <CheckBox
                android:id="@+id/rememberMeCheckBox"
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:text="@string/remember_me"
                android:textColor="@color/black" />



        </RelativeLayout>


        <Button
            android:id="@+id/login_user_btn"
            android:layout_below="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="@color/black"
            android:text="@string/log_in"
            android:textColor="#fff" />

        <Button
            android:id="@+id/goToSignUpActivity"
            android:layout_below="@+id/login_user_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="#00000000"
            android:text="@string/create_an_account"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/aclonica"/>

        <RelativeLayout
            android:id="@+id/login_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_centerInParent="true"
            android:background="@drawable/whitecircle"
            android:visibility="invisible"
            android:elevation="10dp">

            <ProgressBar
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>


    </RelativeLayout>

</ScrollView>